PDF viewer registers frame sink hierarchy.

We were not registering the frame sink hierarchy for the PDF viewer.
HostFrameSinkManager didn't know what FrameSinkId was expected to embed
new Surfaces from the PDF viewer and would drop the temporary
references. This meant that during resize it was possible to get into a
state where renderer embedded a PDF viewer Surface that had already been
deleted.

RenderWidgetHostViewGuest is built on RenderWidgetHostViewChildFrame
which is supposed to handle registering frame sink hierarchy. The parent
FrameSinkId is only set when using CrossProcessFrameConnector and PDF
viewer is a special case that doesn't use CrossProcessFrameConnector.

When creating RenderWidgetHostViewGuest set the parent FrameSinkId by
getting it from the owner. The owner is a renderer created to embed the
PDF viewer, so there shouldn't be any reparenting concerns.
RenderWidgetHostViewChildFrame will handle registering and unregistering
frame sink hierarchy as expected after this change.

Bug: 760194, 676384
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: I689426b32fb8a18bdd877ef04116777d4870c7a6
Reviewed-on: https://chromium-review.googlesource.com/641654
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Ehsan Karamad <ekaramad@chromium.org>
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498202}
Former-commit-id: e4b6f0c7c4bb48603d35f9928be8ecc8ca4d73fc